--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   catalog:
     image: projectnessie/nessie
@@ -40,9 +38,8 @@ services:
     environment:
       - MINIO_ROOT_USER=admin
       - MINIO_ROOT_PASSWORD=password
-      - MINIO_DOMAIN=storage
-      - MINIO_REGION_NAME=us-east-1
-      - MINIO_REGION=us-east-1
+    volumes:
+      - ./data:/data
     networks:
       data-lake-network:
     ports:
@@ -76,13 +73,6 @@ services:
     container_name: mc
     networks:
       data-lake-network:
-        aliases:
-          - minio.storage
-    environment:
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_DEFAULT_REGION=us-east-1
     entrypoint: >
       /bin/sh -c "
       until (/usr/bin/mc config host add minio http://storage:9000 admin password) do echo '...waiting...' && sleep 1; done;
@@ -95,7 +85,7 @@ services:
       "
 
   spark:
-    image: bitnami/spark:3.5.1
+    image: apache/spark:3.5.0
     container_name: spark
     networks:
       data-lake-network:
@@ -105,11 +95,8 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_DEFAULT_REGION=us-east-1
+    volumes:
+      - ./data:/opt/spark/data
     ports:
       - "4040:4040"
       - "8085:8080"
@@ -117,7 +104,7 @@ services:
       - "10000:10000"
 
   spark-worker:
-    image: bitnami/spark:3.5.1
+    image: apache/spark:3.5.0
     container_name: spark-worker
     networks:
       data-lake-network:
@@ -130,11 +117,8 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=spark
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_DEFAULT_REGION=us-east-1
+    volumes:
+      - ./data:/opt/spark/data
     depends_on:
       - spark
 
@@ -148,12 +132,9 @@ services:
       - "8888:8888"
     volumes:
       - ./jupyter/notebooks:/home/jovyan/work
+      - ./data:/home/jovyan/data
     environment:
       - JUPYTER_TOKEN=TestTest123
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_DEFAULT_REGION=us-east-1
     command: start-notebook.sh --NotebookApp.token=${JUPYTER_TOKEN}
 
   postgres:
